refactor: change all variable to camelCase
