# src/config/swagger.yaml
@@ -135,8 +135,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /users/{user_id}/missions:
+                $ref: '#/components/schemas/ErrorResponse'  /users/{userId}/missions:
     post:
       tags:
         - User
@@ -144,7 +143,7 @@ paths:
       description: 특정 사용자에게 미션을 추가합니다
       parameters:
         - in: path
-          name: user_id
+          name: userId
           required: true
           schema:
             type: integer
@@ -166,8 +165,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /regions/{region_id}/shops:
+                $ref: '#/components/schemas/ErrorResponse'  /regions/{regionId}/shops:
     post:
       tags:
         - Region
@@ -175,7 +173,7 @@ paths:
       description: 특정 지역에 가게를 생성합니다
       parameters:
         - in: path
-          name: region_id
+          name: regionId
           required: true
           schema:
             type: integer
@@ -197,8 +195,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /shops/{shop_id}/missions:
+                $ref: '#/components/schemas/ErrorResponse'  /shops/{shopId}/missions:
     post:
       tags:
         - Shop
@@ -206,7 +203,7 @@ paths:
       description: 특정 가게에 미션을 생성합니다
       parameters:
         - in: path
-          name: shop_id
+          name: shopId
           required: true
           schema:
             type: integer
@@ -228,8 +225,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrorResponse'
-  /shops/{shop_id}/reviews:
+                $ref: '#/components/schemas/ErrorResponse'  /shops/{shopId}/reviews:
     post:
       tags:
         - Shop
@@ -237,7 +233,7 @@ paths:
       description: 특정 가게에 리뷰를 생성합니다
       parameters:
         - in: path
-          name: shop_id
+          name: shopId
           required: true
           schema:
             type: integer
