# src/routes/user.js
@@ -3,6 +3,6 @@ import { userController } from "../controllers/user.controller.js";
 
 const userRouter = express.Router();
 
-userRouter.post("/:user_id/missions", userController.addMissionToUser);
+userRouter.post("/:userId/missions", userController.addMissionToUser);
 
 export default userRouter;
